--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/2.rollback-to-a-savepoint-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/2.rollback-to-a-savepoint-of-mysql-mode.md
@@ -4,7 +4,7 @@ After you mark savepoints for a transaction, you can use the `ROLLBACK TO SAVEPO
 
 ## Prerequisites
 
-Savepoints are marked. For more information, see [Mark a savepoint](1.mark-a-savepoint.md). 
+Savepoints are marked. For more information, see [Mark a savepoint](1.mark-a-savepoint-of-mysql-mode.md). 
 
 ## Roll back a transaction to a savepoint
 
@@ -127,10 +127,10 @@ The transaction in the following example contains several DML statements and sev
    
    ```
 
-For more information about transaction rollback, see [Roll back a transaction](../5.roll-back-transactions.md).
+For more information about transaction rollback, see [Roll back a transaction](../5.roll-back-transactions-of-mysql-mode.md).
 
 ## Related topics
 
-* [Mark a savepoint](1.mark-a-savepoint.md)
+* [Mark a savepoint](1.mark-a-savepoint-of-mysql-mode.md)
 
-* [Release a savepoint](3.release-a-savepoint.md)
+* [Release a savepoint](3.release-a-savepoint-of-mysql-mode.md)
