--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/3.release-a-savepoint-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/3.release-a-savepoint-of-mysql-mode.md
@@ -4,7 +4,7 @@ You can release a savepoint that is no longer needed.
 
 ## Prerequisites
 
-Savepoints are marked. For more information, see [Mark a savepoint](1.mark-a-savepoint.md). 
+Savepoints are marked. For more information, see [Mark a savepoint](1.mark-a-savepoint-of-mysql-mode.md). 
 
 ## Release a savepoint
 
