--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
@@ -20,7 +20,7 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
    * Managing databases and modifying parameters 
 
-   For more information about how to connect to an OceanBase Database tenant by using OBClient, see [Connect to an OceanBase Database tenant by using OBClient](2.connect-to-an-oceanbase-tenant-by-using-obclient.md). 
+   For more information about how to connect to an OceanBase Database tenant by using OBClient, see [Connect to an OceanBase Database tenant by using OBClient](2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md). 
 
 * ODC
 
@@ -28,7 +28,7 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
    ODC is compatible with both MySQL and Oracle tenants in OceanBase Database. It provides database developers with various features, such as daily development, WebSQL-based workspace, SQL diagnostics, session management, and data import and export. 
 
-   For more information about how to connect to an OceanBase Database tenant by using ODC, see [Connect to OceanBase Database by using ODC](3.connect-to-the-oceanbase-database-through-odc.md). 
+   For more information about how to connect to an OceanBase Database tenant by using ODC, see [Connect to OceanBase Database by using ODC](3.connect-to-the-oceanbase-database-through-odc-of-oracle-mode.md). 
 
 ## Connect to OceanBase Database by using a driver
 
@@ -52,7 +52,7 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
    OceanBase Connector/J can be installed with one click. The installation package is named `oceanbase-client-[Version No.].jar`. You have obtained the installation package of the OceanBase Connector/J driver from OceanBase Technical Support. For more information about the installation procedure, see [OceanBase Connector/J](https://www.oceanbase.com/docs/enterprise/oceanbase-connector-j-cn). 
 
-   For more information about how to connect Java applications to OceanBase Database, see [Connect Java applications to OceanBase Database](../../../2.quickstart/4.oracle-based-application-development.md/2.java-application-1.md). 
+   For more information about how to connect Java applications to OceanBase Database, see [Connect Java applications to OceanBase Database](../../../2.quickstart/3.create-sample-application-of-oracle-mode/2.java-application-of-oracle-model.md). 
 
 * C driver (OBCI)
 
@@ -62,13 +62,13 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
    OBCI is a C language call interface provided by OceanBase. It provides features that are compatible with OCI. If you want to use a C application written by using Oracle OCI, you need only to specify the OBCI library as the runtime library during linking. By default, library files are installed in the `/u01/obclient/lib` path. 
 
-   For more information about how to connect C applications to OceanBase Database, see [Connect C applications to OceanBase Database](../../../2.quickstart/4.oracle-based-application-development.md/3.c-application-1.md). 
+   For more information about how to connect C applications to OceanBase Database, see [Connect C applications to OceanBase Database](../../../2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md). 
 
 * Python driver
 
    OceanBase Connector/J uses the standard JDBC APIs for Python applications to connect to OceanBase Database without using the Python module. 
 
-   For more information about how to connect Python applications to OceanBase Database, see [Connect Python applications to OceanBase Database](../../../2.quickstart/4.oracle-based-application-development.md/1.python-application-1.md). 
+   For more information about how to connect Python applications to OceanBase Database, see [Connect Python applications to OceanBase Database](../../../2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md). 
 
 ## Connect to OceanBase Database by using an ORM framework
 
@@ -78,24 +78,24 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
 * SpringBoot
 
-   For more information about how to connect to OceanBase Database by using SpringBoot, see [Connect to OceanBase Database by using SpringBoot](7.connect-to-the-oceanbase-database-through-spring-boot.md). 
+   For more information about how to connect to OceanBase Database by using SpringBoot, see [Connect to OceanBase Database by using SpringBoot](7.connect-to-the-oceanbase-database-through-spring-boot-of-oracle-mode.md). 
 
 * SpringBatch
 
-   For more information about how to connect to OceanBase Database by using SpringBatch, see [Connect to OceanBase Database by using SpringBatch](8.connect-to-the-oceanbase-database-through-spring-batch.md). 
+   For more information about how to connect to OceanBase Database by using SpringBatch, see [Connect to OceanBase Database by using SpringBatch](8.connect-to-the-oceanbase-database-through-spring-batch-of-oracle-mode.md). 
 
 * SpringJDBC
 
-   For more information about how to connect to OceanBase Database by using SpringJDBC, see [Connect to OceanBase Database by using SpringJDBC](9.connect-to-the-oceanbase-database-through-spring-jdbc.md). 
+   For more information about how to connect to OceanBase Database by using SpringJDBC, see [Connect to OceanBase Database by using SpringJDBC](9.connect-to-the-oceanbase-database-through-spring-jdbc-of-oracle-mode.md). 
 
 * SpringJPA
 
-   For more information about how to connect to OceanBase Database by using SpringJPA, see [Connect to OceanBase Database by using SpringJPA](10.connect-to-the-oceanbase-database-through-springjpa.md). 
+   For more information about how to connect to OceanBase Database by using SpringJPA, see [Connect to OceanBase Database by using SpringJPA](10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md). 
 
 * Hibernate
 
-   For more information about how to connect to OceanBase Database by using Hibernate, see [Connect to OceanBase Database by using Hibernate](11.connect-to-the-oceanbase-database-through-hibernate.md). 
+   For more information about how to connect to OceanBase Database by using Hibernate, see [Connect to OceanBase Database by using Hibernate](11.connect-to-the-oceanbase-database-through-hibernate-of-oracle-mode.md). 
 
 * MyBatis
 
-   For more information about how to connect to OceanBase Database by using MyBatis, see [Connect to OceanBase Database by using MyBatis](12.connect-to-the-oceanbase-database-through-mybatis.md). 
+   For more information about how to connect to OceanBase Database by using MyBatis, see [Connect to OceanBase Database by using MyBatis](12.connect-to-the-oceanbase-database-through-mybatis-of-oracle-mode.md). 
