--- a/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -10,23 +10,23 @@ A database table is a collection of two-dimensional arrays and represents and st
 
 * A non-partitioned table contains only one partition. 
 
-For more information, see [Overview](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle\2.table/1.table-overview.md). 
+For more information, see [Overview](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/2.table-of-oracle-mode/1.table-overview-of-oracle-mode.md). 
 
 ## Preparations
 
 Before you create a table, make sure that:
 
-* You have logged on to an Oracle tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-for-oracle-mode/1.connection-mode-overview.md). 
+* You have logged on to an Oracle tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md). 
 
    > **Note**
    >
    > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
 
-* You have the `CREATE TABLE` privilege. For more information about how to view your privileges, see [View user privileges](7.reference\2.manage-guide\2.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\2.oracle-3\4.view-user-permissions.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](7.reference\2.manage-guide\2.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\2.oracle-3\5.modify-user-permissions-1.md). 
+* You have the `CREATE TABLE` privilege. For more information about how to view your privileges, see [View user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md). 
 
 ## Create a table
 
-Use the [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) statement to create a table and complete the table creation based on the content of this topic. 
+Use the [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) statement to create a table and complete the table creation based on the content of this topic. 
 
 ### Define the table name
 
@@ -51,7 +51,7 @@ Observe the following requirements when you define columns for a table:
 
 * Select a proper data type for the data to be stored in columns. 
 
-* For more information about the data types supported in Oracle mode of OceanBase Database, see [Overview](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/3.basic-elements-1/1.built-in-data-types/1.overview-of-built-in-data-types.md). 
+* For more information about the data types supported in Oracle mode of OceanBase Database, see [Overview](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md). 
 
 * For string data, we recommend that you use a variable-length string data type and specify the maximum length. Make sure that the maximum length specified is greater than the maximum number of characters to store. This is to avoid character truncation when the maximum length is exceeded. 
 
@@ -67,13 +67,13 @@ A PRIMARY KEY constraint imposes a primary key value rule on a key, which can be
 
 After you create a table with a primary key, the system automatically creates a globally unique index for the primary key column. You can use the primary key to quickly locate rows. 
 
-To specify a column as a primary key column, add the `PRIMARY KEY` keyword to the definition of this column. To define a PRIMARY KEY constraint on multiple columns, add the definition of the PRIMARY KEY constraint after the list of columns in the [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) statement. 
+To specify a column as a primary key column, add the `PRIMARY KEY` keyword to the definition of this column. To define a PRIMARY KEY constraint on multiple columns, add the definition of the PRIMARY KEY constraint after the list of columns in the [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) statement. 
 
 Observe the following requirements when you define primary key columns:
 
 * We recommend that you define one primary key column for a table. Each database table can contain a single collection of primary keys. 
 
-   In OceanBase Database, users are not forced to define primary key columns for tables. However, primary key columns can help uniquely determine each row in a table and ensure that no duplicate rows exist. If no existing field can be used as the primary key, you can add a numeric column as the primary key, and use the Sequence object of the Oracle tenant to generate sequential values for this column. For more information about sequences, see [Sequences](7.reference\2.manage-guide\3.database-object-management-1\1.oracle-4\5.management-sequence-1.md). 
+   In OceanBase Database, users are not forced to define primary key columns for tables. However, primary key columns can help uniquely determine each row in a table and ensure that no duplicate rows exist. If no existing field can be used as the primary key, you can add a numeric column as the primary key, and use the Sequence object of the Oracle tenant to generate sequential values for this column. For more information about sequences, see [Sequences](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md). 
 
    OceanBase Database allows you to add a primary key column for an existing table whose primary keys were not specified when the table was created. 
 
@@ -85,7 +85,7 @@ Observe the following requirements when you define primary key columns:
 
 * We recommend that a PRIMARY KEY constraint be explicitly identified by its name when you define primary key constraints on multiple columns. For example, name a PRIMARY KEY constraint "PK_xxx". 
 
-For more information about PRIMARY KEY constraints, see [PRIMARY KEY constraints](./../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/8.data-integrity/2.integrity-constraint-type/4.primary-key-constraint.md). 
+For more information about PRIMARY KEY constraints, see [PRIMARY KEY constraints](./../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/8.data-integrity-of-oracle-mode/2.integrity-constraint-type-of-oracle-mode/4.primary-key-constraint-of-oracle-mode.md). 
 
 Example 2: Define a `PRIMARY KEY` constraint on multiple columns. 
 
@@ -105,7 +105,7 @@ obclient [SYS]> desc ordr;
 
 In this example, `c1` and `c2` are defined as primary key columns and a PRIMARY KEY constraint named `PK_c1_c2` is defined for them.  The values of the c1 and c2 columns cannot be NULL or duplicate. 
 
-After you define primary key columns, you can delete or modify them. For more information about operations related to PRIMARY KEY constraints, see [Define column constraints](7.reference\2.manage-guide\3.database-object-management-1\1.oracle-4\1.manage-tables-1\4.define-the-constraint-type-for-a-column-1.md). 
+After you define primary key columns, you can delete or modify them. For more information about operations related to PRIMARY KEY constraints, see [Define column constraints](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md). 
 
 ### Define other column constraints
 
@@ -123,7 +123,7 @@ The following describes constraints of different types:
 
    If you do not specify the constraint name when you create a `FOREIGN KEY` constraint, the system automatically allocates a constraint name in the `table name_OBFK_creation timestamp` format, for example, `t1_OBFK_1627747200000000`. 
 
-   By default, OceanBase Database checks foreign keys. To disable or enable foreign key check, modify the `foreign_key_checks` tenant variable. For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../7.reference/5.system-reference/3.system-variable-for-oracle/27.foreign_key_checks-1-2-3-4.md). 
+   By default, OceanBase Database checks foreign keys. To disable or enable foreign key check, modify the `foreign_key_checks` tenant variable. For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/27.foreign_key_checks-of-oracle-mode.md). 
 
 * `CHECK` constraints: The values of a column in the table must conform to specified conditions. 
 
@@ -131,7 +131,7 @@ The following describes constraints of different types:
 
    If you do not specify the constraint name when you create a `CHECK` constraint, the system automatically allocates a constraint name in the `table name_OBCHECK_creation timestamp` format, for example: `t1_OBCHECK_1629350823880271`. 
 
-To constrain a single column, add a constraint keyword to the definition of this column. To constrain multiple columns, add the entire constraint definition after the list of columns in the [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) statement. 
+To constrain a single column, add a constraint keyword to the definition of this column. To constrain multiple columns, add the entire constraint definition after the list of columns in the [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) statement. 
 
 Observe the following requirements when you define other column constraints:
 
@@ -274,7 +274,7 @@ Query OK, 1 row affected
 
 In this example, after the `CHECK` constraint is added on the `col1` column, an error is returned if any value inserted into the `col1` column is not greater than `10`. 
 
-For more information about how to define other column constraints, see [Define column constraints](7.reference\2.manage-guide\3.database-object-management-1\1.oracle-4\1.manage-tables-1\4.define-the-constraint-type-for-a-column-1.md). 
+For more information about how to define other column constraints, see [Define column constraints](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md). 
 
 ### Select a partitioning strategy
 
@@ -282,7 +282,7 @@ When you create a table, you must clarify its partitioning strategy. If the tabl
 
 Partitioned tables in OceanBase Database in Oracle mode can be classified into RANGE, LIST, and HASH partitioned tables by the partitioning strategy. Based on the partitioning dimension, partitioned tables are classified into partitioned tables and subpartitioned tables. Subpartitioned tables are secondary partitioned tables. Therefore, a partitioned table has one partitioning key and a subpartitioned table has two partitioning keys. A subpartitioned table can apply different partitioning strategies. 
 
-For more information about partitioning, see [Partitioning](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/4.partition/1.partition-overview-3.md). 
+For more information about partitioning, see [Partitioning](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/4.partition-of-oracle-mode/1.the-partition-overview-of-oracle-mode.md). 
 
 **RANGE partitioning**
 
@@ -355,7 +355,7 @@ Composite partitioning partitions a table using one partitioning strategy and pa
 
 RANGE, LIST, and HASH can be used as the subpartitioning strategies of a composite partitioned table. In OceanBase Database, subpartitioned tables are classified into template-based subpartitioned tables and non-template-based subpartitioned tables. 
 
-The following examples describe how to create a subpartitioned table. For more examples, see [Manage partitions](../../../7.reference/2.manage-guide/4.distributed-storage-management/2.manage-partition-table/1.oracle-1/2.create-a-partition-table-2.md). 
+The following examples describe how to create a subpartitioned table. For more examples, see [Manage partitions](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md). 
 
 Example 10: Create a RANGE-LIST-subpartitioned table by using a template. 
 
@@ -457,6 +457,6 @@ In this example, a subpartitioned table is created without using the `SUBPARTITI
 
 ## Subsequent operations
 
-* [Create an index](3.create-a-index.md)
+* [Create an index](3.create-a-index-of-oracle-mode.md)
 
-* [Manage partitions](../../../7.reference/2.manage-guide/4.distributed-storage-management/2.manage-partition-table/1.oracle-1/2.create-a-partition-table-2.md)
+* [Manage partitions](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md)
