--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
@@ -29,4 +29,4 @@ obclient> select 'Medium', 6*6 from dual;
 1 row in set
 ```
 
-For more information about how to use query statements, see [SELECT](../../6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/5.SELECT-1/1.simple-select.md). 
+For more information about how to use query statements, see [SELECT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md). 
