--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/1.inner-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/1.inner-join-of-oracle-mode.md
@@ -186,8 +186,8 @@ Based on the tables and data created in the preceding examples, query data with 
 
 ## Related topics
 
-* [FULL JOIN queries](2.full-join.md)
+* [FULL JOIN queries](2.full-join-of-oracle-mode.md)
 
-* [LEFT JOIN queries](3.left-join.md)
+* [LEFT JOIN queries](3.left-join-of-oracle-mode.md)
 
-* [RIGHT JOIN queries](4.right-join.md)
+* [RIGHT JOIN queries](4.right-join-of-oracle-mode.md)
