--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/2.full-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/2.full-join-of-oracle-mode.md
@@ -8,7 +8,7 @@ An OUTER JOIN query uses a comparison operator to compare the data in two tables
 
 OUTER JOIN queries include FULL JOIN queries, LEFT JOIN queries, and RIGHT JOIN queries. An outer join returns all the rows that meet the join conditions. In addition, it returns unused rows of one table and fills `NULL` in the corresponding positions from the other table. 
 
-This topic describes how to use FULL JOIN queries. For more information about LEFT JOIN queries and RIGHT JOIN queries, see [LEFT JOIN queries](3.left-join.md) and [RIGHT JOIN queries](4.right-join.md). 
+This topic describes how to use FULL JOIN queries. For more information about LEFT JOIN queries and RIGHT JOIN queries, see [LEFT JOIN queries](3.left-join-of-oracle-mode.md) and [RIGHT JOIN queries](4.right-join-of-oracle-mode.md). 
 
 ## Syntax
 
@@ -126,8 +126,8 @@ obclient [SYS]> SELECT * FROM tbl_a FULL JOIN tbl_b ON tbl_a.id=tbl_b.num WHERE 
 
 ## Related topics
 
-* [INNER JOIN queries](1.inner-join.md)
+* [INNER JOIN queries](1.inner-join-of-oracle-mode.md)
 
-* [LEFT JOIN queries](3.left-join.md)
+* [LEFT JOIN queries](3.left-join-of-oracle-mode.md)
 
-* [RIGHT JOIN queries](4.right-join.md)
+* [RIGHT JOIN queries](4.right-join-of-oracle-mode.md)
