--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md
@@ -42,4 +42,4 @@ Query OK, 0 rows affected
 
 ## Related topics
 
-* [Roll back a transaction to a savepoint](2.rollback-to-a-savepoint.md)
+* [Roll back a transaction to a savepoint](2.rollback-to-a-savepoint-of-oracle-mode.md)
