--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
@@ -18,7 +18,7 @@ In OceanBase Database in Oracle mode, you can commit transactions explicitly or 
 
       > **Note**
       >
-      > If the repeatable read isolation level is set for the transaction, sessions where the transaction is started cannot query newly committed data. For more information about transaction isolation levels, see [Transaction isolation levels](../../7.reference/1.concepts-of-oceanbase-database-system/8.transaction-management-1/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/2.oracle-7.md). 
+      > If the repeatable read isolation level is set for the transaction, sessions where the transaction is started cannot query newly committed data. For more information about transaction isolation levels, see [Transaction isolation levels](2.start-a-transaction-of-oracle-mode.md). 
 
 * If transactions are committed implicitly, namely, when `autocommit` is set to `1`, each SQL statement is a transaction. In this case, you do not need to proactively commit the entire transaction. After the SQL statement is executed, your changes are persisted, and you cannot roll them back with a `ROLLBACK` statement. 
 
