--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/9.foreign-key-conflict-with-error-code-ora-00600-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/9.foreign-key-conflict-with-error-code-ora-00600-of-oracle-mode.md
@@ -17,7 +17,7 @@ The error codes corresponding to this error message are as follows:
 
 * Error code in OceanBase Database: 5317
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-for-oracle/1.use-error-information.md). 
+For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
 
 ## Possible causes
 
