--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
@@ -115,4 +115,4 @@ Example:
 
 ## What to do next
 
-Verify that OAT is installed and can be started successfully. For more information, see [Verify OAT deployment](2.verify-after-deployment.md).
+Verify that OAT is installed and can be started successfully. For more information, see [Verify OAT deployment](2.verify-after-deployment-oat-graphical.md).
