--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/2.create-a-tenant-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/2.create-a-tenant-graphical.md
@@ -99,4 +99,4 @@ This topic describes how to create a business tenant in the OceanBase cluster in
 
 ## Subsequent operations
 
-For more information about how to verify connectivity after you create the tenant, see [Verify connectivity after tenant creation](3.verify-after-deployment.md).
+For more information about how to verify connectivity after you create the tenant, see [Verify connectivity after tenant creation](3.verify-after-deployment-tenant-graphical.md).
