--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/18.manage-tenant-parameters/1.tenant-parameters.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/18.manage-tenant-parameters/1.tenant-parameters.md
@@ -14,6 +14,6 @@ For more information about cluster-level parameters, see the following topics:
 
 * [Query cluster-level parameters](../../1.manage-clusters/3.manage-cluster-parameters/2.you-can-call-this-operation-to-query-cluster-parameters.md)
 
-* [Modify cluster-level parameters](../../../../../6.manage/1.cluster-management/3.common-cluster-operations/13.modify-cluster-parameters.md)
+* [Modify cluster-level parameters](../../1.manage-clusters/3.manage-cluster-parameters/3.manager-modify-the-cluster-parameters.md)
 
 For more information about the system parameters of OceanBase Database, see [Overview](../../2.configuration-management/1.configuration-management-introduction.md).
