--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/1.users-and-permissions/4.mysql-tenant.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/1.users-and-permissions/4.mysql-tenant.md
@@ -10,4 +10,4 @@ The built-in `root` user under each MySQL tenant in OceanBase Database acts as t
 
 ## Users
 
-Regular users must be granted the required access and operation privileges before they can access and manage database objects under the corresponding tenants. Regular users are usually created and granted privileges by the tenant administrator. For more information about how to create and grant privileges to a user, see [Create a user](../3.mysql-mode/1.create-user-of-mysql-mode.md) and [Modify user privileges](../../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md).
+Regular users must be granted the required access and operation privileges before they can access and manage database objects under the corresponding tenants. Regular users are usually created and granted privileges by the tenant administrator. For more information about how to create and grant privileges to a user, see [Create a user](../3.mysql-mode/1.create-a-user-of-mysql-mode.md) and [Modify user privileges](../3.mysql-mode/5.modify-user-permissions-for-mysql-tenant-of-mysql-mode.md).
