--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/4.view-logs/2.query-the-last-sql-request-log-by-using-the-trace.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/4.view-logs/2.query-the-last-sql-request-log-by-using-the-trace.md
@@ -48,7 +48,7 @@ Procedure:
    ```
 
    The `ElapseTime` field indicates the time currently consumed for this step, in milliseconds. For example, if the `ElapseTime` field of the `pc_get_plan` step is `0.025 ms`, it indicates that OceanBase Database takes 0.025 ms to obtain an execution plan from the plan cache.
-   The following part describes common operations. For more information about operation types, see the **Span** section in [Trace log](../../../7.management/3.daily-inspection/9.full-link-detection/2.trace-log.md).
+   The following part describes common operations. For more information about operation types, see the **Span** section in [Trace log](../../../7.management/3.daily-inspection/9.full-link-detection/2.full-link-tracking-process.md).
 
    * com_query_process: the query process.
 
