--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/2.optimize-sql-statements.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/2.optimize-sql-statements.md
@@ -13,5 +13,5 @@ To analyze a slow SQL query, perform the following steps:
 3. Collect statistics on the objects, such as tables, columns, and predicates, involved in the SQL query. Statistics are the key to selecting the optimal execution plan in the cost model. The optimizer can use statistics to optimize the plan selection strategy. For more information, see [Collect statistics](4.optimizer-statistics/1.statistics-overview.md).
 
 4. Find the slow SQL query. You can use one of the following methods to optimize the execution time or resource consumption of the SQL query as expected:
-   * Rewrite the SQL query to generate the best execution plan. For more information, see [Query rewrite](5.query-rewrite/1.overview.md).
-   * For an SQL query involving multi-table access, pay attention to the join of multiple tables and optimize the query by selecting a better access path, join order, and join algorithm. For more information, see [Access path](6.query-optimization/1.access-path/1.overview.md), [Join algorithms](6.query-optimization/2.join-algorithm/2.join-algorithm.md), and [Join order](6.query-optimization/2.join-algorithm/3.join-order.md).
+   * Rewrite the SQL query to generate the best execution plan. For more information, see [Query rewrite](5.query-rewrite/1.query-rewrite-overview.md).
+   * For an SQL query involving multi-table access, pay attention to the join of multiple tables and optimize the query by selecting a better access path, join order, and join algorithm. For more information, see [Access path](6.query-optimization/1.access-path/1.access-path-overview.md), [Join algorithms](6.query-optimization/2.join-algorithm/2.join-algorithm.md), and [Join order](6.query-optimization/2.join-algorithm/3.join-order.md).
