--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md
@@ -42,6 +42,6 @@ Query OK, 0 rows affected
 
 ## Related topics
 
-* [Roll back a transaction to a savepoint](2.rollback-to-a-savepoint.md)
+* [Roll back a transaction to a savepoint](2.rollback-to-a-savepoint-of-mysql-mode.md)
 
-* [Release a savepoint](3.release-a-savepoint.md)
+* [Release a savepoint](3.release-a-savepoint-of-mysql-mode.md)
