--- a/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
@@ -12,7 +12,7 @@ Indexes can be classified into unique indexes and non-unique indexes.
 
 * A column with a non-unique index may contain identical values. 
 
-For more information about unique and non-unique indexes, see [Unique and non-unique indexes](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/3.index/3.unique-and-non-unique-indexes.md). 
+For more information about unique and non-unique indexes, see [Unique and non-unique indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/3.unique-and-non-unique-indexes-of-oracle-mode.md). 
 
 In a partitioned table, indexes can also be classified into local indexes and global indexes.
 
@@ -20,21 +20,21 @@ In a partitioned table, indexes can also be classified into local indexes and gl
 
 * The partitioning of a global index is independent of the partitioning of the table. Therefore, one partition of a global index may point to multiple table partitions. 
 
-For more information about local and global indexes, see [Local and global indexes](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/1.oracle/3.index/2.local-and-global-indexes.md). 
+For more information about local and global indexes, see [Local and global indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/2.local-and-global-indexes-of-oracle-mode.md). 
 
 ## Preparations
 
 Before you create an index, make sure that:
 
-* You have logged on to an Oracle tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-for-oracle-mode/1.connection-mode-overview.md). 
+* You have logged on to an Oracle tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md). 
 
    > **Note**
    >
    > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
 
-* You have the `INDEX` privilege and the `ALTER` privilege on the table where an index is to be created. For more information about how to view your privileges, see [View user privilege](7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/4.view-user-permissions.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/5.modify-user-permissions-1.md). 
+* You have the `INDEX` privilege and the `ALTER` privilege on the table where an index is to be created. For more information about how to view your privileges, see [View user privilege](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md). 
 
-* A table has been created. For more information about how to create a table, see [Create a table](3.create-a-table.md). 
+* A table has been created. For more information about how to create a table, see [Create a table](2.create-a-table-of-oracle-mode.md). 
 
 ## Suggestions on index creation
 
@@ -56,7 +56,7 @@ Before you create an index, make sure that:
 
 To avoid duplicate values in an indexed column, create a unique index on the column. 
 
-You can use the [CREATE UNIQUE INDEX](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) statement to create a unique index on an existing table based on the following requirements. 
+You can use the [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) statement to create a unique index on an existing table based on the following requirements. 
 
 Observe the following requirements when you create unique indexes:
 
@@ -87,7 +87,7 @@ obclient [SYS]> SELECT INDEX_NAME,INDEX_TYPE,TABLE_OWNER,TABLE_NAME,UNIQUENESS F
 
 ## Create a non-unique index
 
-You can use the [CREATE INDEX](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) statement to create a non-unique index on an existing table based on the following requirements. 
+You can use the [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) statement to create a non-unique index on an existing table based on the following requirements. 
 
 Observe the following requirements when you create non-unique indexes:
 
@@ -111,9 +111,9 @@ A local index is created on data in a single partition. The key-value pairs of t
 
 To use a local unique index as a unique constraint on a table, the local unique index must contain a partitioning key of the table. 
 
-Use the [CREATE INDEX](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) statement and the `LOCAL` keyword to create a local index on an existing table based on the following requirements. 
+Use the [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) statement and the `LOCAL` keyword to create a local index on an existing table based on the following requirements. 
 
-Use the [CREATE UNIQUE INDEX](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) statement and the `LOCAL` keyword to create a local unique index on an existing table based on the following requirements. 
+Use the [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) statement and the `LOCAL` keyword to create a local unique index on an existing table based on the following requirements. 
 
 Observe the following requirements when you create local indexes:
 
@@ -163,9 +163,9 @@ Query OK, 0 rows affected
 
 Use the `GLOBAL` keyword to create a global index. Unlike a local index, the partitioning of a global index is independent of the partitioning of the table. You can specify the partitioning rules and the number of partitions for a global index. These rules and this number do not have to be the same as those of the table. 
 
-Use the [CREATE INDEX](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) statement and the `GLOBAL` keyword to create a global index on an existing table based on the following requirements. 
+Use the [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) statement and the `GLOBAL` keyword to create a global index on an existing table based on the following requirements. 
 
-Use the [CREATE UNIQUE INDEX](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) statement and the `GLOBAL` keyword to create a global unique index on an existing table based on the following requirements. 
+Use the [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) statement and the `GLOBAL` keyword to create a global unique index on an existing table based on the following requirements. 
 
 Observe the following requirements when you create global indexes:
 
@@ -220,6 +220,6 @@ Query OK, 0 rows affected
 
 ## Related topics
 
-* [View indexes](7.reference/2.manage-guide/3.database-object-management-1/1.oracle-4/3.manage-indexes-1/3.view-indexes-1.md)
+* [View indexes](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/3.manage-indexes-of-oracle-mode/3.view-indexes-of-oracle-mode.md)
 
-* [Drop an index](7.reference/2.manage-guide/3.database-object-management-1/1.oracle-4/3.manage-indexes-1/4.delete-an-index-1.md)
+* [Drop an index](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/3.manage-indexes-of-oracle-mode/4.delete-an-index-of-oracle-mode.md)
