--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/2.single-table-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/2.single-table-query-of-oracle-mode.md
@@ -226,5 +226,5 @@ obclient> SELECT empname, sal-100, LOWER(job) FROM emp;
 6 rows in set
 ```
 
-In addition, you can use the `WHERE` condition to query specified columns. For more information, see [Conditional queries](04.condition-query.md).
-For more information, see [Use operators and functions in queries](09.Use-operators-and-functions-in-queries/01.use-arithmetic-operator-in-query.md). 
+In addition, you can use the `WHERE` condition to query specified columns. For more information, see [Conditional queries](4.sort-query-of-oracle-mode.md).
+For more information, see [Use operators and functions in queries](9.execution-plan-of-oracle-mode/1.view-query-execution-plan-of-oracle-mode.md). 
