--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
@@ -6,7 +6,7 @@ This topic describes basic transaction information and transaction control state
 
 A database transaction is a series of database operations that are treated as a unit. The database is transformed from one consistent state to another after a transaction is executed. Generally, the SQL statements in a transaction include both DML statements and query statements. A transaction that contains only query statements is generally called a read-only transaction. 
 
-You can execute the `ROLLBACK` statement to roll back a transaction before it is committed. For more information about transactions, see [Overview of transactions](../../7.reference/1.concepts-of-oceanbase-database-system/8.transaction-management-1/1.transaction-2/1.transaction-introduction.md). 
+You can execute the `ROLLBACK` statement to roll back a transaction before it is committed. For more information about transactions, see [Overview of transactions](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/1.transaction-introduction.md). 
 
 ## Transaction control statements
 
@@ -36,10 +36,10 @@ In the CLI environment of OceanBase Client (OBClient), you can run a transaction
 
 ## Related topics
 
-* [Start a transaction](2.start-a-transaction.md)
+* [Start a transaction](2.start-a-transaction-of-oracle-mode.md)
 
-* [Transaction savepoints](3.transaction-savepoints-of-oracle/1.mark-a-savepoint.md)
+* [Transaction savepoints](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
 
-* [Commit a transaction](4.submit-transaction.md)
+* [Commit a transaction](4.submit-transaction-of-oracle-mode.md)
 
-* [Roll back a transaction](5.roll-back-transactions.md)
+* [Roll back a transaction](5.roll-back-transactions-of-oracle-mode.md)
