--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
@@ -48,7 +48,7 @@ OceanBase Database in Oracle mode is compatible with the transaction control sta
 
 When a transaction is started, OceanBase Database assigns an ID to uniquely identify the transaction. 
 
-In scenarios with multiple concurrencies, the same row of data may be operated by two transactions. For query reads, you can use the `SELECT FOR UPDATE` statement to lock the query results to prevent other DML statements from modifying this record. For information about how to use the `SELECT FOR UPDATE` statement, see [Use the SELECT FOR UPDATE statement to lock query results](4.read-data-for-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/10.lock-query-result-select-for-update.md). 
+In scenarios with multiple concurrencies, the same row of data may be operated by two transactions. For query reads, you can use the `SELECT FOR UPDATE` statement to lock the query results to prevent other DML statements from modifying this record. For information about how to use the `SELECT FOR UPDATE` statement, see [Use the SELECT FOR UPDATE statement to lock query results](../4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-of-oracle-mode/10.lock-query-result-select-for-update-of-oracle-mode.md). 
 
 Use `SET autocommit=0` to disable the autocommit mode and then use `UPDATE` to start a transaction. 
 
@@ -107,12 +107,12 @@ FLUSHED_LOG_SIZE: 0
 1 row in set
 ```
 
-For more information about fields in the `$OB_TRANSACTION_PARTICIPANTS` view, see [$OB_TRANSACTION_PARTICIPANTS](../../7.reference/2.manage-guide/8.system-reference/5.system-view-for-oracle/3.performance-view-6/49.v-ob_transaction_participants-1.md). 
+For more information about fields in the `$OB_TRANSACTION_PARTICIPANTS` view, see [$OB_TRANSACTION_PARTICIPANTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/49.v-ob_transaction_participants-of-oracle-mode.md). 
 
 ## Related topics
 
-* [Transaction savepoints](3.transaction-savepoints-of-oracle/1.mark-a-savepoint.md)
+* [Transaction savepoints](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
 
-* [Commit a transaction](4.submit-transaction.md)
+* [Commit a transaction](4.submit-transaction-of-oracle-mode.md)
 
-* [Roll back a transaction](5.roll-back-transactions.md)
+* [Roll back a transaction](5.roll-back-transactions-of-oracle-mode.md)
