--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/2.rollback-to-a-savepoint-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/2.rollback-to-a-savepoint-of-oracle-mode.md
@@ -4,7 +4,7 @@ After you mark savepoints for a transaction, you can use the `ROLLBACK TO SAVEPO
 
 ## Prerequisites
 
-Savepoints are marked. For more information, see [Mark a savepoint](1.mark-a-savepoint.md). 
+Savepoints are marked. For more information, see [Mark a savepoint](1.mark-a-savepoint-of-oracle-mode.md). 
 
 ## Roll back a transaction to a savepoint
 
@@ -117,4 +117,4 @@ The transaction in the following example contains several DML statements and sev
    5 rows in set
    ```
 
-For more information about transaction rollback, see [Roll back a transaction](../5.roll-back-transactions.md).
+For more information about transaction rollback, see [Roll back a transaction](../5.roll-back-transactions-of-oracle-mode.md).
