--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/3.transaction-timeout-with-error-code-ora-00600-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/3.transaction-timeout-with-error-code-ora-00600-of-oracle-mode.md
@@ -51,7 +51,7 @@ The error codes corresponding to this error message are as follows:
 
 * Error code in OceanBase Database: 6210
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-for-mysql/1.use-error-information-1.md). 
+For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
 
 ## Possible causes
 
