--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/4.user-locked-with-error-code-3118-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/4.user-locked-with-error-code-3118-of-oracle-mode.md
@@ -15,7 +15,7 @@ ERROR 3118 (HY000): User locked
 
 ## Possible causes
 
-OceanBase Database provides a mechanism to handle logon failures. If a user fails to log on to OceanBase Database multiple times, OceanBase Database locks the account of the user to prevent malicious password attacks. This improves the security of OceanBase Database. For more information about how to handle logon failures, see [Handle logon failures](../../../7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/3.logon-failure-handling-policy.md). 
+OceanBase Database provides a mechanism to handle logon failures. If a user fails to log on to OceanBase Database multiple times, OceanBase Database locks the account of the user to prevent malicious password attacks. This improves the security of OceanBase Database. For more information about how to handle logon failures, see [Handle logon failures](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md). 
 
 ## Troubleshooting procedure
 
