--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant-graphical.md
@@ -23,4 +23,4 @@ This topic describes how to view resources available for the tenants by using Oc
 
 ## Subsequent operations
 
-After you confirm the cluster resources, you can create business tenants based on the remaining resources. For more information, see [Create a tenant](2.create-tenant.md).
+After you confirm the cluster resources, you can create business tenants based on the remaining resources. For more information, see [Create a tenant](2.create-a-tenant-graphical.md).
