--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment-ocp-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment-ocp-command-line.md
@@ -73,4 +73,4 @@ If the log contains the following information, OCP is deployed:
 
 ## Subsequent operations
 
-For more information about how to verify OCP deployment, see [Verify OCP deployment](4.post-deployment-check.md).
+For more information about how to verify OCP deployment, see [Verify OCP deployment](4.post-deployment-check-ocp-command-line.md).
