--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
@@ -4,7 +4,7 @@ After you deploy an OceanBase Database Proxy (ODP, also known as OBProxy), you c
 
 ## Prerequisites
 
-You have deployed an ODP. For more information about ODP deployment, see [Deploy ODP](../../../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy.md).
+You have deployed an ODP. For more information about ODP deployment, see [Deploy ODP](../../../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy-command-line.md).
 
 ## Background
 
