--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
@@ -18,11 +18,11 @@ When an execution plan involves multiple tables or partitions, the plan is defin
 
 **Access path**
 
-The method by which a table is accessed, including primary table access and secondary index access. For more information, see [Access path](4.sql-optimization/6.query-optimization/1.access-path/1.overview.md).
+The method by which a table is accessed, including primary table access and secondary index access. For more information, see [Access path](../5.sql-optimization/4.sql-optimization/6.query-optimization/1.access-path/1.access-path-overview.md).
 
 **Join order**
 
-The order by which tables are joined. Currently, OceanBase Database supports only left-deep join trees. For more information, see [Join order](4.sql-optimization/6.query-optimization/2.join-algorithm/3.join-order.md).
+The order by which tables are joined. Currently, OceanBase Database supports only left-deep join trees. For more information, see [Join order](../5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.join-order.md).
 
 **Join algorithm**
 
