--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/179.dbms-utility-oracle/1.dbms-utility-overviewy-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/179.dbms-utility-oracle/1.dbms-utility-overviewy-oracle.md
@@ -67,4 +67,4 @@ DBMS_UTILITY 子程序概览
 | [OLD_CURRENT_SCHEMA](18.old-current-schema-oracle.md)     | 从 `SYS_CONTEXT` ('`USERENV`', '`CURRENT_SCHEMA`') 返回会话值。 |
 | [OLD_CURRENT_USER](19.old-current-user-oracle.md)       | 从 `SYS_CONTEXT` ('`USERENV`', '`CURRENT_USER`') 返回会话值。   |
 | [PORT_STRING](20.port-string-oracle.md)            | 返回唯一标识数据库版本和操作系统的字符串。  |
-| [TABLE_TO_COMMA](21.table-to-comma.md)         | 将 PL 名称表转换为逗号分隔的名称列表。   |
+| [TABLE_TO_COMMA](21.table-to-comma-oracle.md)         | 将 PL 名称表转换为逗号分隔的名称列表。   |
